# lz4

./: meson.build  upstream.wrap
contrib/meson/meson/: GetLz4LibraryVersion.py  InstallSymlink.py  meson.build
contrib/meson/meson/contrib/: meson.build
contrib/meson/meson/contrib/gen_manual/: meson.build
contrib/meson/meson/examples/: meson.build
contrib/meson/meson/lib/: meson.build
contrib/meson/meson/programs/: meson.build
contrib/meson/meson/tests/: meson.build
