# #############################################################################
# Copyright (c) 2018-present        lzutao <taolzu(at)gmail.com>
# All rights reserved.
#
# This source code is licensed under both the BSD-style license (found in the
# LICENSE.meson-wrap-from-upstream.build file in the root directory of this
# source tree) and the GPLv2 (found in the
# COPYING.meson-wrap-from-upstream.build file in the root directory of this
# source tree).
# #############################################################################

subdir('gen_manual')
